# real-value-score

./: .env.example  pyproject.toml
src/inference/: inference.py
src/io_tools/: io.py
src/learning/: config.py  fit_model.py  ml_model.py  preprocessing.py
src/models/: pydantic_models.py
src/utils/: config.py  logger.py
